banner section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <div class="banner-section-container">
         <div class="banner-left">
             <h2>Get body in <br><span class="shape">shape</span>& stay <br>healthy</h2>
-            <p class="banner-text-des">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+            <p class="banner-text-des">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
             <div class="two-button">
                 <p class="btn-primary">Join Club Now!</p>
                 <p class="btn-primary transparent">Download App</p>
@@ -36,16 +36,19 @@
         <div class="banner-right">
             <img src="/images/images 2.png" alt="">
 
-            <button id="badge-one" class="button-style">
-                <span id="ex-year">500+</span><br>
-                <span >Free Workout Videos</span>
-            </button>
+            <div id="badge-one" class="button-style">
+                <span id="ex-year-one">500+</span><br>
+                <span class="short">Free Workout Videos</span>
+            </div>
 
-            <!-- <button id="badge-two" class="button-style">
-                <div class="red"></div>
-                <span id="ex-year">500+</span><br>
-                <span >Free Workout Videos</span>
-            </button> -->
+            <div id="badge-two" class="button-style">
+              <div class="circle"></div>
+              <div>
+                <span id="ex-year-two">350+</span><br>
+              <span class="short">Video tutorial</span>
+              </div>
+          </div>
+
         </div>
        </div>
     </section>
