banner mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness Club</title>
+      <!-- font awesome cdn -->
+      <script
+      src="https://kit.fontawesome.com/85976f3484.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,6 +25,9 @@
           <p>Service</p>
           <p>Contact</p>
           <p>About</p>
+        </div>
+        <div class="three-dot">
+          <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
       <!-- Banner -->
