--- a/index.html
+++ b/index.html
@@ -60,5 +60,35 @@
         </div>
        </div>
     </section>
+
+    <section class="your-habits-section">
+      <h1 class="habit-title">Change Your Habits</h1>
+      <p class="habit-description">
+        We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym.
+      </p>
+      <div class="habit-grides">
+
+        <div class="grid-one">
+          <img src="./images/image 3.png" alt="">
+          <h4>Movement</h4>
+          <p>We believe fitness should be <br>accessible to everyone</p>
+        </div>
+        <div class="grid-one">
+          <img src="./images/image 2.png" alt="">
+          <h4>Time</h4>
+          <p>We believe fitness should be <br>accessible to everyone</p>
+        </div>
+        <div class="grid-one">
+          <img src="./images/image 4.png" alt="">
+          <h4>Weight Loss</h4>
+          <p>We believe fitness should be <br>accessible to everyone</p>
+        </div>
+        <div class="grid-one">
+          <img src="./images/image 5.png" alt="">
+          <h4>Movement</h4>
+          <p>We believe fitness should be <br>accessible to everyone</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
