run an extra mile added

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness Club</title>
-      <!-- font awesome cdn -->
-      <script
+    <!-- font awesome cdn -->
+    <script
       src="https://kit.fontawesome.com/85976f3484.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class=" banner-description">
+    <section class="banner-description">
       <!-- Navbar -->
       <nav class="container nav-bar">
         <!-- logo -->
@@ -31,62 +31,88 @@
         </div>
       </nav>
       <!-- Banner -->
-       <div class="banner-section-container">
+      <div class="banner-section-container">
         <div class="banner-left">
-            <h2>Get body in <br><span class="shape">shape</span>& stay <br>healthy</h2>
-            <p class="banner-text-des">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
-            <div class="two-button">
-                <p class="btn-primary">Join Club Now!</p>
-                <p class="btn-primary transparent">Download App</p>
-            </div>
+          <h2>
+            Get body in <br /><span class="shape">shape</span>& stay
+            <br />healthy
+          </h2>
+          <p class="banner-text-des">
+            A huge selection of health and fitness content, healthy recipes
+            <br />
+            and transformation stories to help you get fit and stay fit!
+          </p>
+          <div class="two-button">
+            <p class="btn-primary">Join Club Now!</p>
+            <p class="btn-primary transparent">Download App</p>
+          </div>
         </div>
 
         <div class="banner-right">
-            <img src="/images/images 2.png" alt="">
+          <img src="/images/images 2.png" alt="" />
 
-            <div id="badge-one" class="button-style">
-                <span id="ex-year-one">500+</span><br>
-                <span class="short">Free Workout Videos</span>
-            </div>
-
-            <div id="badge-two" class="button-style">
-              <div class="circle"></div>
-              <div>
-                <span id="ex-year-two">350+</span><br>
-              <span class="short">Video tutorial</span>
-              </div>
+          <div id="badge-one" class="button-style">
+            <span id="ex-year-one">500+</span><br />
+            <span class="short">Free Workout Videos</span>
           </div>
 
+          <div id="badge-two" class="button-style">
+            <div class="circle"></div>
+            <div>
+              <span id="ex-year-two">350+</span><br />
+              <span class="short">Video tutorial</span>
+            </div>
+          </div>
         </div>
-       </div>
+      </div>
     </section>
 
+
+    <!-- Your habit section -->
     <section class="your-habits-section">
       <h1 class="habit-title">Change Your Habits</h1>
       <p class="habit-description">
-        We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym.
+        We believe fitness should be accessible to everyone, everywhere,
+        regardless of <br />
+        income or access to a gym.
       </p>
       <div class="habit-grides">
-
         <div class="grid-one">
-          <img src="./images/image 3.png" alt="">
+          <img src="./images/image 3.png" alt="" />
           <h4>Movement</h4>
-          <p>We believe fitness should be <br>accessible to everyone</p>
+          <p>We believe fitness should be <br />accessible to everyone</p>
         </div>
         <div class="grid-one">
-          <img src="./images/image 2.png" alt="">
+          <img src="./images/image 2.png" alt="" />
           <h4>Time</h4>
-          <p>We believe fitness should be <br>accessible to everyone</p>
+          <p>We believe fitness should be <br />accessible to everyone</p>
         </div>
         <div class="grid-one">
-          <img src="./images/image 4.png" alt="">
+          <img src="./images/image 4.png" alt="" />
           <h4>Weight Loss</h4>
-          <p>We believe fitness should be <br>accessible to everyone</p>
+          <p>We believe fitness should be <br />accessible to everyone</p>
         </div>
         <div class="grid-one">
-          <img src="./images/image 5.png" alt="">
+          <img src="./images/image 5.png" alt="" />
           <h4>Movement</h4>
-          <p>We believe fitness should be <br>accessible to everyone</p>
+          <p>We believe fitness should be <br />accessible to everyone</p>
+        </div>
+      </div>
+    </section>
+    
+    <!-- Run extra mile Section -->
+
+    <section class="run-extra-mile-description">
+      <div class="run-extra-mile">
+        <div class="run-extra-left">
+          <h1 class="run-extra-title">Run an Extra <br>Mile Easily</h1>
+          <p class="run-extra-des">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
+          <button class="btn-primary">
+            Join Now
+          </button>
+        </div>
+        <div class="run-extra-right">
+          <img src="./images/run.jpg" alt="">
         </div>
       </div>
     </section>
