Our Team Section Added

--- a/index.html
+++ b/index.html
@@ -161,36 +161,91 @@
                 regardless of <br />
                 income or access to a gym.
               </p>
-              
-                <form class="input-box" action="">
-                  <input
-                    type="number"
-                    id="height"
-                    name="height"
-                    placeholder="Height/cm"
-                  />
-  
-                  <input
-                    type="number"
-                    id="weight"
-                    name="weight"
-                    placeholder="Weight/kg"
-                  />
-  
-                  <input type="number" id="age" name="age" placeholder="Age" />
-  
-                  <select id="sex" name="sex" placeholder="Sex">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                  </select>
-  
-                  <select id="activity-factor" name="activity-factor">
-                    <option value="sedentary">Select an activity factor</option>
-                  </select>
-  
-                  <button class="btn-primary" type="submit">Calculate</button>
-                </form>
-              
+
+              <form class="input-box" action="">
+                <input
+                  type="number"
+                  id="height"
+                  name="height"
+                  placeholder="Height/cm"
+                />
+
+                <input
+                  type="number"
+                  id="weight"
+                  name="weight"
+                  placeholder="Weight/kg"
+                />
+
+                <input type="number" id="age" name="age" placeholder="Age" />
+
+                <select id="sex" name="sex" placeholder="Sex">
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+
+                <select id="activity-factor" name="activity-factor">
+                  <option value="sedentary">Select an activity factor</option>
+                </select>
+
+                <button class="btn-primary" type="submit">Calculate</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Meet Our Team -->
+
+    <section class="meet-our-team-description">
+      <div class="meet-our-team">
+        <h2>Meet Our Team</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or <br> access to a gym.
+        </p>
+        <div class="trainer-section">
+          <div class="trainer-box">
+            <img src="./images/trainer1.png" alt="">
+            <div class="box-desxription">
+              <h3>Jerome Bell</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="trainer-box">
+            <img src="./images/trainer2.png" alt="">
+            <div class="box-desxription">
+              <h3>Cameron Willi</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="trainer-box">
+            <img src="./images/trainer3.png" alt="">
+            <div class="box-desxription">
+              <h3>Darrell Steward </h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="trainer-box">
+            <img src="./images/trainer4.png" alt="">
+            <div class="box-desxription">
+              <h3>Dianne Russell</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="trainer-box">
+            <img src="./images/trainer5.png" alt="">
+            <div class="box-desxription">
+              <h3>Cody Fisher</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="trainer-box">
+            <img src="./images/trainer6.png" alt="">
+            <div class="box-desxription">
+              <h3>Theresa Webb</h3>
+              <p>Trainer</p>
             </div>
           </div>
         </div>
