--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="banner-right">
-          <img src="./images/images 2.png" alt="" />
+          <img src="./images/Images 2.png" alt="" />
 
           <div id="badge-one" class="button-style">
             <span id="ex-year-one">500+</span><br />
