Footer Section Added

--- a/index.html
+++ b/index.html
@@ -203,46 +203,47 @@
         <h2>Meet Our Team</h2>
         <p>
           We believe fitness should be accessible to everyone, everywhere,
-          regardless of income or <br> access to a gym.
+          regardless of income or <br />
+          access to a gym.
         </p>
         <div class="trainer-section">
           <div class="trainer-box">
-            <img src="./images/trainer1.png" alt="">
+            <img src="./images/trainer1.png" alt="" />
             <div class="box-desxription">
               <h3>Jerome Bell</h3>
               <p>Trainer</p>
             </div>
           </div>
           <div class="trainer-box">
-            <img src="./images/trainer2.png" alt="">
+            <img src="./images/trainer2.png" alt="" />
             <div class="box-desxription">
               <h3>Cameron Willi</h3>
               <p>Trainer</p>
             </div>
           </div>
           <div class="trainer-box">
-            <img src="./images/trainer3.png" alt="">
+            <img src="./images/trainer3.png" alt="" />
             <div class="box-desxription">
-              <h3>Darrell Steward </h3>
+              <h3>Darrell Steward</h3>
               <p>Trainer</p>
             </div>
           </div>
           <div class="trainer-box">
-            <img src="./images/trainer4.png" alt="">
+            <img src="./images/trainer4.png" alt="" />
             <div class="box-desxription">
               <h3>Dianne Russell</h3>
               <p>Trainer</p>
             </div>
           </div>
           <div class="trainer-box">
-            <img src="./images/trainer5.png" alt="">
+            <img src="./images/trainer5.png" alt="" />
             <div class="box-desxription">
               <h3>Cody Fisher</h3>
               <p>Trainer</p>
             </div>
           </div>
           <div class="trainer-box">
-            <img src="./images/trainer6.png" alt="">
+            <img src="./images/trainer6.png" alt="" />
             <div class="box-desxription">
               <h3>Theresa Webb</h3>
               <p>Trainer</p>
@@ -250,6 +251,36 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Footer Section start here -->
+    <section class="footer-section-description">
+      <div class="footer-section">
+        <div class="footer-one">
+          <h3><span class="span">Fitness</span></h3>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            <br />regardless of income or access to a gym. With <br />hundreds
+            of professional workouts.
+          </p>
+        </div>
+        <div class="footer-two">
+          <h2>Get Started</h2>
+          <p>Service</p>
+          <p>Contact Us</p>
+          <p>Affiliate Program</p>
+          <p>About Us</p>
+        </div>
+        <div class="footer-three">
+          <h2>Get Started</h2>
+          <p>Fitness</p>
+          <p>Platform</p>
+          <p>Workout Libary</p>
+          <p>App Design</p>
+        </div>
+      </div>
+      <hr>
+      <p class="copyright">All right reserved @Fitness 2024</p>
     </section>
   </body>
 </html>
